añadido de inktober.css/.js, gallery.css/.js + añadido de .footer en about.html/.css, inktober.html/.css, gallery.html/.css + linkeados inktober.html, gallery.html en index.html + ERROR CON LA "Z-INDEX" O POSICIÓN DEL .MAIN EN ABOUT.CSS QUE NO DEJA INTERACTUAR CORRECTAMENTE CON .CORNER CUANDO CAMBIO TAMAÑO DE PANTALLA + cabios menores en about.css

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -236,306 +236,6 @@ button{
 
 /*-------------------------------------------------*/
 
-.header{
-    /* background-color: burlywood; */
-    width: 100%;
-    /* min-height: 11.875rem; */
-    min-height: 20vh;
-    padding: .625rem;
-
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: flex-end;
-}
-.header__nav{
-    /* background-color: green; */
-    width: 70%;
-    padding: .625rem;
-}
-.header__ul{
-    /* background-color: lime; */
-    width: 700px;
-    min-height: 100px;
-    margin: 0 auto ;
-    padding: .625rem;
-
-    display:flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    gap: 4rem;
-}
-.header__li{
-    /* background-color: yellow; */
-    background-color: black;
-    /* width: 100px;
-    height: 100px; */
-    border-radius: 50%;
-
-    position: relative;
-
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-}
-.header__circle{
-    background-color: white;
-    width: 100px;
-    height: 100px;
-    border: 2px solid white;
-    border-radius: 50%;
-    position: absolute;
-
-    opacity: 0;
-
-    transition: 0.1s all 0s ease;
-}
-.header__li:hover .header__circle{
-    background-color: rgba(255, 255, 255, 0);
-    width: 100px;
-    height: 100px;
-
-    border: 4px solid white;
-
-    opacity: 1;
-}
-.header__btn{
-    background-color: black;
-    background-color: rgba(0, 0, 0, 0);
-    /* background-color: yellow; */
-    width: 100px;
-    height: 100px;
-    padding: .625rem;
-    border-radius: 50%;
-
-    /* background-image: url(../assets/icon-profile-white.png);
-    background-repeat: no-repeat;
-    background-position:center;
-    background-size: contain; */
-
-    position: absolute;
-    top: 0;
-
-    /* opacity: 1; */
-
-    /* transition: .2s all 0s ease; */
-}
-.header__btn:hover{
-    border: 2px dashed white;
-    animation: circles 150s linear infinite both;
-}
-@keyframes circles{
-    0%{
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(3600deg);
-    }
-}
-.header__btn.active{
-    background-color: rgba(255, 255, 255, 0);
-    /* background-color: red; */
-    width: 100px;
-    height: 100px;
-
-    border: 2px solid white;
-
-    font-weight: bold;
-    border: 4px solid white;
-
-    animation: half__show 0.5s 0s ease 1 backwards;
-}
-.header__img{
-    /* width: 100%;
-    height: 100%; */
-    width: 100px;
-    height: 100px;
-
-    /* position: absolute; */
-    /* top: 0; */
-
-    /* cursor: crosshair; */
-
-    animation: show 1.2s 0s ease 1 backwards;
-}
-.header__separator{
-    background-color: white;
-    width: 100%;
-    min-height: 2px;
-
-    animation: grow 1.2s 0s ease 1 backwards;
-}
-@keyframes half__show{
-    0%{
-        transform: scale(0.9);
-    }
-    50%{
-        transform: scale(1.1);
-    }
-    100%{
-        transform: scale(1);
-    }
-}
-@keyframes show{
-    0%{
-        transform: scale(0);
-    }
-    50%{
-        transform: scale(1.2);
-    }
-    100%{
-        transform: scale(1);
-    }
-}
-@keyframes grow{
-    0%{
-        transform: scaleX(0);
-    }
-    100%{
-        transform: scaleX(1);
-    }
-}
-
-/*-------------------------------------------------*/
-
-.main{}
-.main__hero{
-    /* background-color: lightgreen; */
-    /* background-color: rgba(0, 0, 0, 0); */
-    width: 100%;
-    /* height: 80vh; */
-    min-height:550px;
-    /* padding: 4.5rem .625rem; */
-    padding: 1rem;
-    /* margin: auto; */
-
-    /* display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: center; */
-
-    position: relative;
-    /* z-index: -1; */
-}
-
-.main__section{
-    /* background-color: blue; */
-    /* width: 80%;
-    max-width: 1200px;
-    min-height: 400px; */
-    /* width: 82%; */
-    width: 100%;
-    max-width: 1000px;
-    min-height: 400px;
-    /* min-height: 100vh; */
-    /* padding: .625rem; */
-    /* margin: auto; */
-
-    position: absolute;
-    top: 10px;
-    top: calc( 50% - 400px / 2 );
-    left: calc( 50% - 1000px / 2 );
-
-    /* z-index: 1; */
-
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-
-    
-
-    /* transition: opacity .5s ease; */
-    opacity: 0;
-
-    animation: view 1s 0s ease 1 backwards;
-}
-/* .main__section:first-child{
-    position: static; */
-    /* opacity: 1; */
-/* } */
-.main__section.active{
-    opacity: 1;
-
-    /* padding: .625rem; */
-    /* left: calc( 50% - 1000px / 2 ); */
-
-    /* animation: view 1s 0s ease 1 backwards; */
-}
-@keyframes view{
-    0%{
-        transform: translateY(200%);
-        opacity: 0;
-    }
-    50%{
-        opacity: 0;
-    }
-    100%{
-        transform: translateY(0%);
-        /* opacity: 1; */
-    }
-}
-.section__img{
-    /* background-color: lightpink; */
-    /* width: 50%;
-    min-height: 400px; */
-    width: 50%;
-    max-width: 400px;
-    /* height: 100%; */
-    padding: .625rem;
-    /* max-width: 550px; */
-    /* object-fit: contain; */
-    /* object-fit: cover; */
-    /* object-fit: fill; */
-    /* object-fit: scale-down; */
-}
-.developer__img{
-    /* object-fit: contain; */
-}
-.section__wrap{
-    /* background-color: brown; */
-    width: 50%;
-    padding: .625rem;
-
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-.section__h2{
-    /* background-color: lightcoral; */
-    width: 100%;
-
-    font-size: 3rem;
-    /* font-family: 'Permanent Marker', cursive; */
-    font-family: 'Caveat', cursive;
-    /* text-transform: uppercase; */
-    font-weight: 900;
-    /* letter-spacing: -2px; */
-    line-height: 1.3rem;
-    text-align: left;
-}
-.section__separator{
-    background-color: white;
-    width: 220px;
-    min-height: 2px;
-    margin: 10px 17px 20px;
-}
-.section__p{
-    /* background-color: lightskyblue; */
-    width: 100%;
-
-    font-size: 2rem;
-    font-family: 'Caveat', cursive;
-    /* text-transform: uppercase; */
-    /* letter-spacing: -2px; */
-    line-height: 2rem;
-    text-align: left;
-} 
-
 /*-------------------------------------------------*/
 
 .footer{
@@ -621,22 +321,3 @@ button{
 }
 
 /*-------------------------------------------------*/
-
-@media(max-width: 900px){
-    .main__section{
-        width: 80%;
-        flex-direction: column;
-    }
-    .section__img{
-        max-width: 500px;
-        /* width: 40%; */
-        width: 70%;
-        max-width: 400px;
-        min-width: 250px;
-        height: 100%;
-        padding: .625rem;
-    }
-    .section__wrap{
-        width: 100%;
-    }
-}
